--- a/templates/look.html
+++ b/templates/look.html
@@ -13,14 +13,19 @@
 </head>
 <style>
     @font-face {
-    font-family: 'SpoqaHanSansNeo-Regular';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24SsurroundAir.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
+        font-family: 'SeoulNamsan';
+        font-weight: 300;
+        font-style: normal;
+        src: url('https://cdn.jsdelivr.net/gh/webfontworld/seoulnamsan/SeoulNamsanLight.eot');
+        src: url('https://cdn.jsdelivr.net/gh/webfontworld/seoulnamsan/SeoulNamsanLight.eot?#iefix') format('embedded-opentype'),
+            url('https://cdn.jsdelivr.net/gh/webfontworld/seoulnamsan/SeoulNamsanLight.woff2') format('woff2'),
+            url('https://cdn.jsdelivr.net/gh/webfontworld/seoulnamsan/SeoulNamsanLight.woff') format('woff'),
+            url('https://cdn.jsdelivr.net/gh/webfontworld/seoulnamsan/SeoulNamsanLight.ttf') format("truetype");
+        font-display: swap;
+    }
 
         body{
-            font-family: SpoqaHanSansNeo-Regular, Meiryo;
+            font-family: SeoulNamsan, Meiryo;
             font-weight: bold;
         }
 
