--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
         <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Vocaloid_logo.svg/828px-Vocaloid_logo.svg.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Vocaloid Community</title>
+        <title>Vocaloid</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <script type="text/javascript">
