--- a/templates/look.html
+++ b/templates/look.html
@@ -7,7 +7,7 @@
     <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Vocaloid_logo.svg/828px-Vocaloid_logo.svg.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title{{ result[0][1] }} ({{ result[0][2] }})</title>
+    <title>{{ result[0][1] }} ({{ result[0][2] }})</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
