--- a/templates/look.html
+++ b/templates/look.html
@@ -4,7 +4,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="{{ result[0][1] }} ({{ result[0][2] }}) | 보컬로이드">
     <meta property="og:description" content="{{ result[0][5] }}">
-    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Vocaloid_logo.svg/828px-Vocaloid_logo.svg.png">
+    <meta property="og:image" content="https://64.media.tumblr.com/a19a16176c6a3c702f4870753b33c208/1d36dd7562ebd8d2-69/s1280x1920/758c92a8395501a9f069b0c66e7c0445db6cdcc6.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ result[0][1] }} ({{ result[0][2] }})</title>
